Invocation Sensor Implementation